--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Koi Farm 2 devlog</title>
+    <title>Koi Farm 2 blog | February 2024</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id="sidebar"></div>
-<h1>Devlog</h1>
+<div id="content"><h2>Koi behavior</h2>
+<ul>
+    <li>Koi now interact with each other.</li>
+    <li>Koi now age and grow over time, which also affects their behaviour.</li>
+    <li>Koi now move in 3d, using the full depth of the pond.</li>
+</ul></div>
 </body>
 </html>
