Implemented previous/next links

--- a/2023_11.html
+++ b/2023_11.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<h2>November 2023</h2>
 <div id="content"><h2>Pond digging</h2>
 <ul>
     <li>Ponds can be dug in or out.</li>
 </ul></div>
+<div id="footer"><a href="2023_12.html"><span class="next"></span></a></div>
 </body>
 </html>
