--- a/2023_12.html
+++ b/2023_12.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<h2>December 2023</h2>
 <div id="content"><h2>Creating koi</h2>
 <ul>
     <li>Placeholder models are created on a separate thread.</li>
@@ -13,5 +14,6 @@
     <li>A skeletal animation system with GPU acceleration was made.</li>
     <li>Pond models are rendered in 3D.</li>
 </ul></div>
+<div id="footer"><a href="2023_11.html"><span class="previous"></span></a><a href="2024_01.html"><span class="next"></span></a></div>
 </body>
 </html>
