--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<h2>February 2024</h2>
 <div id="content"><h2>Koi behavior</h2>
 <ul>
     <li>Koi now interact with each other.</li>
     <li>Koi now age and grow over time, which also affects their behaviour.</li>
     <li>Koi now move in 3d, using the full depth of the pond.</li>
 </ul></div>
+<div id="footer"><a href="2024_01.html"><span class="previous"></span></a></div>
 </body>
 </html>
