--- a/2023_11.html
+++ b/2023_11.html
@@ -6,11 +6,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h2>November 2023</h2>
-<div id="content"><h2>Pond digging</h2>
+<div id="wrapper">
+    <div id="index">$index$</div>
+    <div id="blog">
+        <h2>November 2023</h2>
+        <div id="content"><h2>Pond digging</h2>
 <ul>
     <li>Ponds can be dug in or out.</li>
 </ul></div>
-<div id="footer"><a href="2023_12.html"><span class="next"></span></a></div>
+        <div id="footer"><span></span><a href="2023_12.html"><span class="next"></span></a></div>
+    </div>
+</div>
 </body>
 </html>
