--- a/2024_01.html
+++ b/2024_01.html
@@ -6,13 +6,18 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h2>January 2024</h2>
-<div id="content"><h2>Simulating koi at scale</h2>
+<div id="wrapper">
+    <div id="index">$index$</div>
+    <div id="blog">
+        <h2>January 2024</h2>
+        <div id="content"><h2>Simulating koi at scale</h2>
 <ul>
     <li>Koi collision checking</li>
     <li>Koi can be picked up, dropped and thrown.</li>
     <li>Koi bodies are animated using flexible skeletons.</li>
 </ul></div>
-<div id="footer"><a href="2023_12.html"><span class="previous"></span></a><a href="index.html"><span class="next"></span></a></div>
+        <div id="footer"><a href="2023_12.html"><span class="previous"></span></a><a href="index.html"><span class="next"></span></a></div>
+    </div>
+</div>
 </body>
 </html>
