Created index links

--- a/2023_12.html
+++ b/2023_12.html
@@ -7,17 +7,19 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="index">$index$</div>
-    <div id="blog">
-        <h2>December 2023</h2>
-        <div id="content"><h2>Creating koi</h2>
+    <div id="header"><h2>December 2023</h2></div>
+    <div id="content">
+        <div id="index"><ul><li><a href="index.html">February 2024</a></li><li><a href="2024_01.html">January 2024</a></li><li><a href="2023_12.html">December 2023</a></li><li><a href="2023_11.html">November 2023</a></li></ul></div>
+        <div id="blog">
+            <div id="post"><h2>Creating koi</h2>
 <ul>
     <li>Placeholder models are created on a separate thread.</li>
     <li>Ponds now have a collision field, which is used by koi to know where the nearest shore is, and how far they are away from it.</li>
     <li>A skeletal animation system with GPU acceleration was made.</li>
     <li>Pond models are rendered in 3D.</li>
 </ul></div>
-        <div id="footer"><a href="2023_11.html"><span class="previous"></span></a><a href="2024_01.html"><span class="next"></span></a></div>
+            <div id="footer"><a href="2023_11.html"><span class="previous"></span></a><a href="2024_01.html"><span class="next"></span></a></div>
+        </div>
     </div>
 </div>
 </body>
