--- a/2023_11.html
+++ b/2023_11.html
@@ -7,14 +7,16 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="index">$index$</div>
-    <div id="blog">
-        <h2>November 2023</h2>
-        <div id="content"><h2>Pond digging</h2>
+    <div id="header"><h2>November 2023</h2></div>
+    <div id="content">
+        <div id="index"><ul><li><a href="index.html">February 2024</a></li><li><a href="2024_01.html">January 2024</a></li><li><a href="2023_12.html">December 2023</a></li><li><a href="2023_11.html">November 2023</a></li></ul></div>
+        <div id="blog">
+            <div id="post"><h2>Pond digging</h2>
 <ul>
     <li>Ponds can be dug in or out.</li>
 </ul></div>
-        <div id="footer"><span></span><a href="2023_12.html"><span class="next"></span></a></div>
+            <div id="footer"><span></span><a href="2023_12.html"><span class="next"></span></a></div>
+        </div>
     </div>
 </div>
 </body>
