--- a/2024_01.html
+++ b/2024_01.html
@@ -7,16 +7,18 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="index">$index$</div>
-    <div id="blog">
-        <h2>January 2024</h2>
-        <div id="content"><h2>Simulating koi at scale</h2>
+    <div id="header"><h2>January 2024</h2></div>
+    <div id="content">
+        <div id="index"><ul><li><a href="index.html">February 2024</a></li><li><a href="2024_01.html">January 2024</a></li><li><a href="2023_12.html">December 2023</a></li><li><a href="2023_11.html">November 2023</a></li></ul></div>
+        <div id="blog">
+            <div id="post"><h2>Simulating koi at scale</h2>
 <ul>
     <li>Koi collision checking</li>
     <li>Koi can be picked up, dropped and thrown.</li>
     <li>Koi bodies are animated using flexible skeletons.</li>
 </ul></div>
-        <div id="footer"><a href="2023_12.html"><span class="previous"></span></a><a href="index.html"><span class="next"></span></a></div>
+            <div id="footer"><a href="2023_12.html"><span class="previous"></span></a><a href="index.html"><span class="next"></span></a></div>
+        </div>
     </div>
 </div>
 </body>
