--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="index">$index$</div>
-    <div id="blog">
-        <h2>February 2024</h2>
-        <div id="content"><h2>Koi behavior</h2>
+    <div id="header"><h2>February 2024</h2></div>
+    <div id="content">
+        <div id="index"><ul><li><a href="index.html">February 2024</a></li><li><a href="2024_01.html">January 2024</a></li><li><a href="2023_12.html">December 2023</a></li><li><a href="2023_11.html">November 2023</a></li></ul></div>
+        <div id="blog">
+            <div id="post"><h2>Koi behavior</h2>
 <ul>
     <li>Koi now interact with each other.</li>
     <li>Koi now age and grow over time, which also affects their behaviour.</li>
     <li>Koi now move in 3d, using the full depth of the pond.</li>
 </ul></div>
-        <div id="footer"><a href="2024_01.html"><span class="previous"></span></a><span></span></div>
+            <div id="footer"><a href="2024_01.html"><span class="previous"></span></a><span></span></div>
+        </div>
     </div>
 </div>
 </body>
