--- a/2023_11.html
+++ b/2023_11.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Koi Farm 2 blog | November 2023</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-<div id="wrapper">
-    <div id="header"><h2>November 2023</h2></div>
-    <div id="content">
-        <div id="index"><ul><li><a href="index.html">February 2024</a></li><li><a href="2024_01.html">January 2024</a></li><li><a href="2023_12.html">December 2023</a></li><li><a href="2023_11.html">November 2023</a></li></ul></div>
-        <div id="blog">
-            <div id="post"><h2>Pond digging</h2>
-<ul>
-    <li>Ponds can be dug in or out.</li>
-</ul></div>
-            <div id="footer"><span></span><a href="2023_12.html"><span class="next"></span></a></div>
-        </div>
-    </div>
-</div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Koi Farm 2 blog | November 2023</title><link rel="stylesheet" type="text/css" href="style.css"></head><body><div id="wrapper"><div id="header"><h2>November 2023</h2></div><div id="content"><div id="index"><ul><li><a href="index.html">February 2024</a></li><li><a href="2024_01.html">January 2024</a></li><li><a href="2023_12.html">December 2023</a></li><li><a href="2023_11.html">November 2023</a></li></ul></div><div id="blog"><div id="post"><h2>Pond digging</h2><ul><li>Ponds can be dug in or out.</li></ul></div><div id="footer"><span></span><a href="2023_12.html"><span class="next"></span></a></div></div></div></div></body></html>
